Fixed center-align bug

--- a/style.css
+++ b/style.css
@@ -121,19 +121,14 @@ aside:hover .profile-bio {
   font-size: 16px;
 }
 
-.profile-bio h4 {
+.profile-bio h2 {
     text-align: center;
 }
 
-main:hover h4 {
+h2 {
   text-align: center;
-  font-size: 16px;
-  line-height: 25px;
-  display: inline-block;
-  padding: 10px;
-  transition: all ease 0.250s;
-  border-top: 1px solid #fff;
-  border-bottom: 1px solid #fff;
+  color: #0094DE;
+
 }
 
 .job-title {
